# Student

./: README.md  Technical Requirement Document.docx  db.sqlite3  pyproject.toml
Web Page Django/: db.sqlite3
Web Page Django/myapp/: models.py  views.py
Web Page Django/myapp/Templates/: base.html  edit.html  index.html  show.html  welcome.html
Web Page Django/static/img/: 1 (2).jfif  1 (3).jfif
Web Page Django/webapp/: settings.py  urls.py
myapp/Templates/: base.html  index.html  show.html  welcome.html
myapp/migrations/: 0001_initial.py  0002_alter_employee_eemail.py  0003_employee_eclass.py
static/img/: 1 (1).jfif
webapp/: urls.py
