[tool.poetry]
name = "web page django"
version = "0.1.0"
description = ""
authors = ["Pragya <pragyamishra10501@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
